login and sigup working

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <nav>
           <div>
-            <a href="#" class="logo">Uber</a>
+            <a href="/index.html" class="logo">Uber</a>
             <ul class="nav-links">
               <li><a href="#">Company</a></li>
               <li><a href="#">Safety</a></li>
@@ -30,10 +30,9 @@
           </div>
           <div>
             <ul id="nav-links" class="nav-links">
-              <li><a href="#">FR-FR</a></li>
               <li><a href="#">Products</a></li>
-              <li><a href="#">Log in</a></li>
-              <li><a href="#" class="nav__cta">Sign up</a></li>
+              <!-- <li><a href="#">Log in</a></li>
+              <li><a href="#" class="nav__cta">Sign up</a></li> -->
             </ul>
           </div>
           <div class="hamburger">
