--- a/map.html
+++ b/map.html
@@ -77,19 +77,9 @@
         <nav>
           <div>
             <a href="/index.html" class="logo">Uber</a>
-            <ul class="nav-links">
-              <li><a href="#">Company</a></li>
-              <li><a href="#">Safety</a></li>
-              <li><a href="/map.html">Go to map</a></li>
-            </ul>
+            <ul class="nav-links"></ul>
           </div>
-          <div>
-            <ul id="nav-links" class="nav-links">
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Log in</a></li>
-              <li><a href="#" class="nav__cta">Sign up</a></li>
-            </ul>
-          </div>
+
           <div class="hamburger">
             <span class="hamburger-bar"></span
             ><span class="hamburger-bar"></span>
