--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li><a href="#">Safety</a></li>
               <li><a href="/map.html">Go to map</a></li>
               <!-- These are your login and signup links -->
-              <li id="loginLink"><a href="/form.html">Login</a></li>
+              <li id="loginLink"><a href="/form.html">Sign In / Log In</a></li>
             </ul>
           </div>
           <div id="userContainer" class="nav-links" style="display: none">
