--- a/form.html
+++ b/form.html
@@ -45,7 +45,10 @@
     <div class="container">
       <div id="authContainer" class="split">
         <div id="loginCard" class="card">
-          <h2>Login</h2>
+          <center style="margin-bottom: 10px;"> 
+            <img src="./assets/images/sic_long_logo.png" alt="Avatar"> 
+            <h1>Login</h1>
+          </center>
           <form id="loginForm">
             <input type="text" id="username" placeholder="Username" required />
             <input type="password" id="password" placeholder="Password" required />
@@ -70,7 +73,10 @@
           <!-- Added link to show signup form -->
         </div>
         <div id="signupCard" class="card" style="display: none">
-          <h2>Sign Up</h2>
+          <center style="margin-bottom: 10px;"> 
+            <img src="./assets/images/sic_long_logo.png" alt="Avatar"> 
+            <h1>Sign Up</h1>
+          </center>
           <form id="signupForm">
             <input type="text" id="newUsername" placeholder="Username" required />
             <input type="password" id="newPassword" placeholder="Password" required />
